--- a/index.html
+++ b/index.html
@@ -1,118 +1,72 @@
 <!-- Full HTML code -->
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Jaishak's Portfolio</title>
+  <title>Portfolio</title>
   <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet"/>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <nav class="nav-bar">
-    <a href="#home">🏠</a>
-    <a href="#skills">💡</a>
-    <a href="#education">🎓</a>
-    <a href="#experience">💼</a>
-    <a href="#projects">📂</a>
-    <a href="#courses">📘</a>
-    <a href="#contact">📧</a>
+    <a href="#home"><span class="material-icon-theme--folder-home"></span></a>
+    <a href="#about"><span class="noto--desktop-computer"></span></a>
+    <a href="#skills"><span class="skill-icons--windows-light"></span></a>
+    <a href="#contact"><span class="cryptocurrency-color--chat"></span></a>
   </nav>
 
   <main class="main-content">
-    <header class="header" id="home">
+    <header class="header">
       <div class="header-content">
         <h1>Jaishak J</h1>
-        <p>AI Engineer | Data Scientist | Full-Stack Developer</p>
-        <p>Adaptable and Passionate Learner</p>
-        <p> 📍 Chennai, India (Open Remote/ Relocation)</p>
+        <p>AI Software Engineer | Aspiring Full-stack Dev</p>
       </div>
       <div class="clock-container">
-        <div id="live-clock"></div>
+        <div id="live-clock">--:--:--</div>
       </div>
     </header>
 
     <section class="section" id="skills">
-      <h2>✨ Skills</h2>
+      <h2>Skills</h2>
       <div class="skills-grid">
-        <div class="skill-item">Python</div>
-        <div class="skill-item">Artificial Intelligence</div>
-        <div class="skill-item">JavaScript</div>
-        <div class="skill-item">HTML/ CSS</div>
-        <div class="skill-item">TypeScript</div>
-        <div class="skill-item">Data Science</div>
-        <div class="skill-item">Linux</div>
-        <div class="skill-item">AI / ML</div>
-      </div>
-    </section>
-
-    <section class="section" id="education">
-      <h2>🎓 Education</h2>
-      <div class="experience-item">
-        <h3>B.Tech — Artificial Intelligence and Data Science</h3>
-        <p>Jeppiaar Institute of Technology | Anna University (2021–2025)</p>
-        <p>CGPA: 7.38</p>
-      </div>
-    </section>
-
-    <section class="section" id="experience">
-      <h2>💼 Experience</h2>
-      <div class="experience-item">
-        <h3>Machine Learning Intern — Retech Solutions</h3>
-        <p>Aug 2023 – Sep 2023 | Chennai</p>
-        <ul>
-          <li>Worked on real-world ML projects</li>
-          <li>Hands-on with Python, TensorFlow, scikit-learn</li>
-        </ul>
-      </div>
-      <div class="experience-item">
-        <h3>Social Media Marketing Intern — GEEKSGOD</h3>
-        <p>Dec 2021 – Feb 2022 | Bhopal (Remote)</p>
-        <ul>
-          <li>Executed brand engagement strategies</li>
-          <li>Managed content creation and analytics</li>
-        </ul>
-      </div>
-    </section>
-
-    <section class="section" id="projects">
-      <h2>📂 Projects</h2>
-      <div class="project-item">
-        <h3>AI-Powered Video Summarisation Using YOLOv5</h3>
-        <p>Dec 2024 – Apr 2025</p>
-        <p>LLM chatbot reduced support time by 50% using video summaries & recommendation systems.</p>
-      </div>
-    </section>
-
-    <section class="section" id="courses">
-      <h2>📘 Courses</h2>
-      <div class="experience-item">
-        <ul>
-          <li>Joy of Computing with Python – NPTEL (Feb 2022 – Oct 2022)</li>
-          <li>MS Office – Naan Mudhalvan (Nov 2023 – Jun 2024)</li>
-          <li>Network Essentials – Naan Mudhalvan (Jul 2024 – Oct 2024)</li>
-        </ul>
+        <div class="skill-item">
+          <span class="skill-icons--windows-light"></span>
+          <p>Windows</p>
+        </div>
+        <div class="skill-item">
+          <span class="skill-icons--expressjs-light"></span>
+          <p>Express.js</p>
+        </div>
+        <div class="skill-item">
+          <span class="devicon--premierepro"></span>
+          <p>Premiere Pro</p>
+        </div>
+        <div class="skill-item">
+          <span class="streamline-kameleon-color--certificate-2-duo"></span>
+          <p>Certified</p>
+        </div>
+        <div class="skill-item">
+          <span class="noto--desktop-computer"></span>
+          <p>Computer Basics</p>
+        </div>
+        <div class="skill-item">
+          <span class="cryptocurrency-color--chat"></span>
+          <p>Chat / Web3</p>
+        </div>
       </div>
     </section>
 
     <section class="section" id="contact">
-      <h2>📧 Contact</h2>
+      <h2>Contact</h2>
       <div class="contact-info">
         <div class="contact-item">
-          <span>📱</span>
-          <a href="tel:+919345589347">+91 9345589347</a>
+          <span class="cryptocurrency-color--chat"></span>
+          <a href="mailto:jaishak@example.com">jaishak@example.com</a>
         </div>
         <div class="contact-item">
-          <span>📧</span>
-          <a href="mailto:jaishak1219@gmail.com">jaishak1219@gmail.com</a>
-        </div>
-        <div class="contact-item">
-          <span>💼</span>
-          <a href="https://www.linkedin.com/in/jaishakj" target="_blank">linkedIn</a>
-        </div>
-        <div class="contact-item">
-          <span>🌐</span>
-          <a href="https://github.com/jaishakj" target="_blank">Github</a>
+          <span class="streamline-kameleon-color--certificate-2-duo"></span>
+          <a href="https://github.com/jaishak" target="_blank">GitHub</a>
         </div>
       </div>
     </section>
@@ -121,28 +75,11 @@
   <script>
     function updateClock() {
       const now = new Date();
-      const options = {
-        timeZone: 'Asia/Kolkata',
-        hour12: true,
-        hour: 'numeric',
-        minute: '2-digit',
-        second: '2-digit',
-        weekday: 'short',
-        day: 'numeric',
-        month: 'short'
-      };
-      const formatter = new Intl.DateTimeFormat('en-IN', options);
-      const parts = formatter.formatToParts(now);
-      const timeParts = {};
-      parts.forEach(part => { timeParts[part.type] = part.value; });
-      document.getElementById('live-clock').innerHTML = `
-        ${timeParts.weekday}<br>
-        ${timeParts.day} ${timeParts.month}<br>
-        ${timeParts.hour}:${timeParts.minute}:${timeParts.second} ${timeParts.dayPeriod} IST
-      `;
+      const clock = document.getElementById('live-clock');
+      clock.textContent = now.toLocaleTimeString();
     }
-    updateClock();
     setInterval(updateClock, 1000);
+    updateClock();
   </script>
 </body>
 </html>
