--- a/index.html
+++ b/index.html
@@ -99,19 +99,19 @@
       <h2>📧 Contact</h2>
       <div class="contact-info">
         <div class="contact-item">
-          <span>📱</span>
+          <span class="icon-home"></span>
           <a href="tel:+919345589347">+91 9345589347</a>
         </div>
         <div class="contact-item">
-          <span>📧</span>
+          <span class="icon-contact"></span>
           <a href="mailto:jaishak1219@gmail.com">jaishak1219@gmail.com</a>
         </div>
         <div class="contact-item">
-          <span>💼</span>
+          <span class="icon-experience"></span>
           <a href="https://www.linkedin.com/in/jaishakj" target="_blank">linkedIn</a>
         </div>
         <div class="contact-item">
-          <span>🌐</span>
+          <span class="icon-projects"></span>
           <a href="https://github.com/jaishakj" target="_blank">Github</a>
         </div>
       </div>
