--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
         <p>AI Engineer | Data Scientist | Full-Stack Developer</p>
         <p>Adaptable and Passionate Learner</p>
         <p> 📍 Chennai, India (Open Remote/ Relocation)</p>
+        <div class="resume-button-container">
+          <a href="./assets/resume.pdf" target="_blank" class="resume-button">
+            📄 View Resume
+          </a>
+        </div>
       </div>
       <div class="clock-container">
         <div id="live-clock"></div>
