--- a/index.html
+++ b/index.html
@@ -1,153 +1,208 @@
-<!-- Full HTML code -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Jaishak's Portfolio</title>
-  <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet"/>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Jaishak J — AI Engineer</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Crimson+Pro:wght@400;600;700&family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <nav class="nav-bar">
-    <a href="#home">🏠</a>
-    <a href="#skills">💡</a>
-    <a href="#education">🎓</a>
-    <a href="#experience">💼</a>
-    <a href="#projects">📂</a>
-    <a href="#courses">📘</a>
-    <a href="#contact">📧</a>
-  </nav>
-
-  <main class="main-content">
-    <header class="header" id="home">
-      <div class="header-content">
-        <h1>Jaishak J</h1>
-        <p>AI Engineer | Data Scientist | Full-Stack Developer</p>
-        <p>Adaptable and Passionate Learner</p>
-        <p> 📍 Chennai, India (Open Remote/ Relocation)</p>
-        <div class="resume-button-container">
-          <a href="./assets/resume.pdf" target="_blank" class="resume-button">
-            📄 View Resume
-          </a>
-        </div>
-      </div>
-      <div class="clock-container">
-        <div id="live-clock"></div>
-      </div>
+    <header>
+        <nav class="container">
+            <div class="logo mono">J</div>
+            <ul class="mono">
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#experience">Experience</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
     </header>
 
-    <section class="section" id="skills">
-      <h2>✨ Skills</h2>
-      <div class="skills-grid">
-        <div class="skill-item">Python</div>
-        <div class="skill-item">Artificial Intelligence</div>
-        <div class="skill-item">JavaScript</div>
-        <div class="skill-item">HTML/ CSS</div>
-        <div class="skill-item">TypeScript</div>
-        <div class="skill-item">Data Science</div>
-        <div class="skill-item">Linux</div>
-        <div class="skill-item">AI / ML</div>
-      </div>
-    </section>
+    <main>
+        <section class="hero container">
+            <div class="hero-content">
+                <h1>Building <span class="gradient-text">intelligent systems</span> that matter</h1>
+                <p class="tagline">AI Engineer specializing in machine learning, full-stack development, and computer vision</p>
+                <div class="location mono">
+                    <span class="status-dot"></span>
+                    Chennai, India • Open to Remote/Relocation
+                </div>
+                <div class="cta-group">
+                    <a href="#projects" class="btn btn-primary mono">View Projects</a>
+                    <a href="#contact" class="btn btn-secondary mono">Get in Touch</a>
+                </div>
+            </div>
+        </section>
 
-    <section class="section" id="education">
-      <h2>🎓 Education</h2>
-      <div class="experience-item">
-        <h3>B.Tech — Artificial Intelligence and Data Science</h3>
-        <p>Jeppiaar Institute of Technology | Anna University (2021–2025)</p>
-        <p>CGPA: 7.38</p>
-      </div>
-    </section>
+        <section id="skills" class="container fade-in">
+            <div class="section-header">
+                <div class="section-label mono">01 / Capabilities</div>
+                <h2 class="section-title">What I Do</h2>
+            </div>
+            <div class="skills-grid">
+                <div class="skill-card stagger-1 fade-in">
+                    <h3 class="mono">Machine Learning</h3>
+                    <p>Building and deploying ML models with TensorFlow, PyTorch, and scikit-learn. Experience with deep learning architectures and model optimization.</p>
+                </div>
+                <div class="skill-card stagger-2 fade-in">
+                    <h3 class="mono">Computer Vision</h3>
+                    <p>Object detection, image classification, and video analysis using YOLOv5, CNNs, and modern CV frameworks.</p>
+                </div>
+                <div class="skill-card stagger-3 fade-in">
+                    <h3 class="mono">Full-Stack Development</h3>
+                    <p>End-to-end web applications using Python, JavaScript, TypeScript, and modern frameworks. RESTful APIs and database design.</p>
+                </div>
+                <div class="skill-card stagger-4 fade-in">
+                    <h3 class="mono">Data Engineering</h3>
+                    <p>Data pipeline design, ETL processes, and working with large-scale datasets. SQL, NoSQL, and data visualization.</p>
+                </div>
+            </div>
+        </section>
 
-    <section class="section" id="experience">
-      <h2>💼 Experience</h2>
-      <div class="experience-item">
-        <h3>Machine Learning Intern — Retech Solutions</h3>
-        <p>Aug 2023 – Sep 2023 | Chennai</p>
-        <ul>
-          <li>Worked on real-world ML projects</li>
-          <li>Hands-on with Python, TensorFlow, scikit-learn</li>
-        </ul>
-      </div>
-      <div class="experience-item">
-        <h3>Social Media Marketing Intern — GEEKSGOD</h3>
-        <p>Dec 2021 – Feb 2022 | Bhopal (Remote)</p>
-        <ul>
-          <li>Executed brand engagement strategies</li>
-          <li>Managed content creation and analytics</li>
-        </ul>
-      </div>
-    </section>
+        <section id="education" class="container fade-in">
+            <div class="section-header">
+                <div class="section-label mono">02 / Background</div>
+                <h2 class="section-title">Education</h2>
+            </div>
+            <div class="timeline">
+                <div class="timeline-item">
+                    <div class="timeline-date mono">2021 — 2025</div>
+                    <h3 class="timeline-title">B.Tech in AI & Data Science</h3>
+                    <div class="timeline-org">Jeppiaar Institute of Technology, Anna University</div>
+                    <div class="timeline-desc">
+                        CGPA: 7.38/10
+                        <br>Focus: Machine Learning, Deep Learning, Data Structures, Computer Vision
+                    </div>
+                </div>
+            </div>
+        </section>
 
-    <section class="section" id="projects">
-      <h2>📂 Projects</h2>
-      <div class="project-item">
-        <h3>AI-Powered Video Summarisation Using YOLOv5</h3>
-        <p>Dec 2024 – Apr 2025</p>
-        <p>LLM chatbot reduced support time by 50% using video summaries & recommendation systems.</p>
-      </div>
-    </section>
+        <section id="experience" class="container fade-in">
+            <div class="section-header">
+                <div class="section-label mono">03 / Experience</div>
+                <h2 class="section-title">Where I've Worked</h2>
+            </div>
+            <div class="timeline">
+                <div class="timeline-item">
+                    <div class="timeline-date mono">Aug 2023 — Sep 2023</div>
+                    <h3 class="timeline-title">Machine Learning Intern</h3>
+                    <div class="timeline-org">Retech Solutions • Chennai</div>
+                    <div class="timeline-desc">
+                        <ul>
+                            <li>Developed and deployed ML models for real-world business applications</li>
+                            <li>Worked with Python, TensorFlow, and scikit-learn on production systems</li>
+                            <li>Collaborated with cross-functional teams on data-driven solutions</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
 
-    <section class="section" id="courses">
-      <h2>📘 Courses</h2>
-      <div class="experience-item">
-        <ul>
-          <li>Joy of Computing with Python – NPTEL (Feb 2022 – Oct 2022)</li>
-          <li>MS Office – Naan Mudhalvan (Nov 2023 – Jun 2024)</li>
-          <li>Network Essentials – Naan Mudhalvan (Jul 2024 – Oct 2024)</li>
-        </ul>
-      </div>
-    </section>
+        <section id="projects" class="container fade-in">
+            <div class="section-header">
+                <div class="section-label mono">04 / Work</div>
+                <h2 class="section-title">Selected Projects</h2>
+            </div>
+            <div class="project-grid">
+                <div class="project-card">
+                    <div class="project-meta">
+                        <span class="project-tag mono">Computer Vision</span>
+                        <span class="project-tag mono">YOLOv5</span>
+                        <span class="project-tag mono">NLP</span>
+                    </div>
+                    <h3>AI-Powered Video Summarization</h3>
+                    <p>Built an intelligent video analysis system using YOLOv5 for object detection and LLM integration for automated summarization. Includes chatbot interface and recommendation engine for enhanced user experience.</p>
+                    <div class="project-links">
+                        <a href="https://github.com/jaishakj/Ai-Powered-Video-Summarisation-Multiple-Models.git" target="_blank" class="project-link mono">View Code →</a>
+                    </div>
+                </div>
 
-    <section class="section" id="contact">
-      <h2>📧 Contact</h2>
-      <div class="contact-info">
-        <div class="contact-item">
-          <span class="icon-home"></span>
-          <a href="tel:+919345589347">+91 9345589347</a>
+                <!-- Placeholder for future projects -->
+                <div class="project-card" style="opacity: 0.5; border-style: dashed;">
+                    <div class="project-meta">
+                        <span class="project-tag mono">Coming Soon</span>
+                    </div>
+                    <h3>More Projects in Progress</h3>
+                    <p>Currently working on additional ML and full-stack projects. Check back soon for updates.</p>
+                </div>
+            </div>
+        </section>
+
+        <section id="contact" class="container fade-in">
+            <div class="section-header">
+                <div class="section-label mono">05 / Connect</div>
+                <h2 class="section-title">Let's Talk</h2>
+            </div>
+            <div class="contact-grid">
+                <div class="contact-item">
+                    <div class="contact-label mono">Email</div>
+                    <div class="contact-value">
+                        <a href="mailto:jaishak1219@gmail.com">jaishak1219@gmail.com</a>
+                    </div>
+                </div>
+                <div class="contact-item">
+                    <div class="contact-label mono">Phone</div>
+                    <div class="contact-value">
+                        <a href="tel:+919345589347">+91 9345589347</a>
+                    </div>
+                </div>
+                <div class="contact-item">
+                    <div class="contact-label mono">LinkedIn</div>
+                    <div class="contact-value">
+                        <a href="https://www.linkedin.com/in/jaishakj" target="_blank">linkedin.com/in/jaishakj</a>
+                    </div>
+                </div>
+                <div class="contact-item">
+                    <div class="contact-label mono">GitHub</div>
+                    <div class="contact-value">
+                        <a href="https://github.com/jaishakj" target="_blank">github.com/jaishakj</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <div class="container">
+            <p class="footer-text mono">Designed & Built by Jaishak J</p>
+            <p class="footer-text" style="color: #333;">© 2025 — Chennai, India</p>
         </div>
-        <div class="contact-item">
-          <span class="icon-contact"></span>
-          <a href="mailto:jaishak1219@gmail.com">jaishak1219@gmail.com</a>
-        </div>
-        <div class="contact-item">
-          <span class="icon-experience"></span>
-          <a href="https://www.linkedin.com/in/jaishakj" target="_blank">linkedIn</a>
-        </div>
-        <div class="contact-item">
-          <span class="icon-projects"></span>
-          <a href="https://github.com/jaishakj" target="_blank">Github</a>
-        </div>
-      </div>
-    </section>
-  </main>
+    </footer>
 
-  <script>
-    function updateClock() {
-      const now = new Date();
-      const options = {
-        timeZone: 'Asia/Kolkata',
-        hour12: true,
-        hour: 'numeric',
-        minute: '2-digit',
-        second: '2-digit',
-        weekday: 'short',
-        day: 'numeric',
-        month: 'short'
-      };
-      const formatter = new Intl.DateTimeFormat('en-IN', options);
-      const parts = formatter.formatToParts(now);
-      const timeParts = {};
-      parts.forEach(part => { timeParts[part.type] = part.value; });
-      document.getElementById('live-clock').innerHTML = `
-        ${timeParts.weekday}<br>
-        ${timeParts.day} ${timeParts.month}<br>
-        ${timeParts.hour}:${timeParts.minute}:${timeParts.second} ${timeParts.dayPeriod} IST
-      `;
-    }
-    updateClock();
-    setInterval(updateClock, 1000);
-  </script>
+    <script>
+        // Smooth scroll
+        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+            anchor.addEventListener('click', function (e) {
+                e.preventDefault();
+                const target = document.querySelector(this.getAttribute('href'));
+                if (target) {
+                    target.scrollIntoView({ behavior: 'smooth', block: 'start' });
+                }
+            });
+        });
+
+        // Scroll-triggered animations
+        const observerOptions = {
+            threshold: 0.1,
+            rootMargin: '0px 0px -100px 0px'
+        };
+
+        const observer = new IntersectionObserver((entries) => {
+            entries.forEach(entry => {
+                if (entry.isIntersecting) {
+                    entry.target.style.opacity = '1';
+                    entry.target.style.transform = 'translateY(0)';
+                }
+            });
+        }, observerOptions);
+
+        document.querySelectorAll('.fade-in').forEach(el => {
+            observer.observe(el);
+        });
+    </script>
 </body>
 </html>
