--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <nav class="container">
-            <div class="logo mono">J</div>
+            <div class="logo mono">Jaishak J</div>
             <ul class="mono">
                 <li><a href="#skills">Skills</a></li>
                 <li><a href="#experience">Experience</a></li>
