--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                 </div>
 
                 <div class="project-side-image">
-                    <img src="./image.png" alt="AI Engineering">
+                    <img src="./anime.jpeg" alt="AI Engineering">
                     <div class="side-image-badge">
                         <span class="badge-icon">⚡</span>
                         <span class="badge-text">AI POWERED</span>
