--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
             <div class="hero-images">
                 <div class="image-card main-card">
-                    <img src="./image.png" alt="Jaishak Anime Character">
+                    <img src="./anime.jpeg" alt="Jaishak Anime Character">
                     <div class="star-badge">★</div>
                 </div>
             </div>
