--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
                 <div class="hero-right">
                     <div class="image-card main-card">
-                        <img src="./image.png" alt="Jaishak Anime Character">
+                        <img src="./anime.jpeg" alt="Jaishak Anime Character">
                         <div class="star-badge">★</div>
                     </div>
                 </div>
@@ -201,7 +201,7 @@
                 </div>
 
                 <div class="project-side-image-circle">
-                    <img src="./image.png" alt="AI Engineering" class="rotating-image">
+                    <img src="./anime.jpeg" alt="AI Engineering" class="rotating-image">
                 </div>
             </div>
         </div>
