Update footer text in index.html

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
     <!-- Footer -->
     <footer>
         <div class="footer-container">
-            <p>© 2025 JAISHAK J — BUILT WITH ❤️ IN CHENNAI</p>
+            <p>© 2025 Chennai — Build by Jaishak J</p>
         </div>
     </footer>
 </body>
