Add animated SVG text to badge section
Replaced static badge text with animated SVG text for better visual appeal.

--- a/index.html
+++ b/index.html
@@ -38,12 +38,15 @@
                     </h1>
                     
                     <div class="badge-circle">
-                        <div class="badge-text">
-                            <div class="rotate-text">MACHINE LEARNING • COMPUTER VISION • FULL-STACK DEV •</div>
-                        </div>
-                        <button class="badge-btn">
-                            START<br>EXPLORING
-                        </button>
+                        <svg viewBox="0 0 200 200" style="position: absolute; width: 100%; height: 100%; animation: rotate 20s linear infinite;">
+                            <path id="circlePath" d="M 100, 100 m -80, 0 a 80,80 0 1,1 160,0 a 80,80 0 1,1 -160,0" fill="none"/>
+                            <text style="font-size: 11px; font-weight: 700; letter-spacing: 2px; fill: black;">
+                                <textPath href="#circlePath">
+                                    MACHINE LEARNING • COMPUTER VISION • FULL-STACK DEV •
+                                </textPath>
+                            </text>
+                        </svg>
+                        <button class="badge-btn">START<br>EXPLORING</button>
                     </div>
 
                     <div class="info-card">
