--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <a href="#projects">PROJECTS</a>
                 <a href="#contact">CONTACT</a>
             </div>
-            <a href="./assets/resume.pdf" target="_blank" class="cta-btn">HIRE ME</a>
+            <a href="./assets/resume.pdf" target="_blank" class="cta-btn">RESUME</a>
         </nav>
     </header>
 
@@ -42,7 +42,7 @@
                             <path id="circlePath" d="M 100, 100 m -80, 0 a 80,80 0 1,1 160,0 a 80,80 0 1,1 -160,0" fill="none"/>
                             <text style="font-size: 11px; font-weight: 700; letter-spacing: 2px; fill: black;">
                                 <textPath href="#circlePath">
-                                    MACHINE LEARNING • COMPUTER VISION • FULL-STACK DEV •
+                                    MACHINE LEARNING • COMPUTER VISION • FULL-STACK DEV • DATA SCIENCE
                                 </textPath>
                             </text>
                         </svg>
@@ -90,13 +90,13 @@
                 <div class="info-box">
                     <div class="info-number">01</div>
                     <h3>EDUCATION</h3>
-                    <p>B.Tech in AI & Data Science<br>Jeppiaar Institute of Technology<br>Anna University (2021-2025)<br>CGPA: 7.38</p>
+                    <p>B.Tech in Artificial Intelligence & Data Science<br>Jeppiaar Institute of Technology, Chennai<br>Anna University (2021-2025)<br>CGPA: 7.38</p>
                 </div>
                 
                 <div class="info-box">
                     <div class="info-number">02</div>
                     <h3>EXPERIENCE</h3>
-                    <p>ML Intern @ Retech Solutions<br>Aug 2023 - Sep 2023<br>Chennai, India</p>
+                    <p>Machine Learning Intern @ Retech Solutions pvt.ltd<br>Aug 2023 - Sep 2023<br>Chennai, India</p>
                 </div>
             </div>
         </div>
