--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                             <path id="circlePath" d="M 100, 100 m -80, 0 a 80,80 0 1,1 160,0 a 80,80 0 1,1 -160,0" fill="none"/>
                             <text style="font-size: 11px; font-weight: 700; letter-spacing: 2px; fill: black;">
                                 <textPath href="#circlePath">
-                                    MACHINE LEARNING • COMPUTER VISION • FULL-STACK DEV • DATA SCIENCE
+                                    ML • COMPUTER VISION • FULL-STACK DEV • DATA SCIENCE •
                                 </textPath>
                             </text>
                         </svg>
