Update image source for anime character

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
                 <div class="hero-right">
                     <div class="image-card main-card">
-                        <img src="./anime.jpeg" alt="Jaishak Anime Character">
+                        <img src="./assets/anime1.png" alt="Jaishak Anime Character">
                         <div class="star-badge">★</div>
                     </div>
                 </div>
