Replace anime.jpeg with anime1.jpeg in index.html

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                 </div>
 
                 <div class="project-side-image-circle">
-                    <img src="./anime.jpeg" alt="AI Engineering" class="rotating-image">
+                    <img src="./anime1.jpeg" alt="AI Engineering" class="rotating-image">
                 </div>
             </div>
         </div>
