--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                 </div>
 
                 <div class="project-side-image-circle">
-                    <img src="./anime1.jpeg" alt="AI Engineering" class="rotating-image">
+                    <div class="tenor-gif-embed" data-postid="402674747635664052" data-share-method="host" data-aspect-ratio="1" data-width="100%"><a href="https://tenor.com/view/racoon-raccoon-raccoon-in-a-circle-silly-raccooon-dancing-raccoon-gif-402674747635664052">Racoon Raccoon GIF</a>from <a href="https://tenor.com/search/racoon-gifs">Racoon GIFs</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
                 </div>
             </div>
         </div>
