--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
                                 </textPath>
                             </text>
                         </svg>
-                        <button class="badge-btn">START<br>EXPLORING</button>
+                        <a href="https://github.com/jaishakj" target="_blank" class="badge-btn">
+                            START<br>EXPLORING
+                        </a>
                     </div>
 
                     <div class="info-card">
