--- a/index.html
+++ b/index.html
@@ -292,6 +292,28 @@
         <h4>GITHUB</h4>
         <a href="https://github.com/jaishakj" target="_blank">github.com/jaishakj</a>
     </div>
+    <div class="contact-card">
+        <div class="contact-icon">
+            <svg width="60" height="60" viewBox="0 0 48 48" fill="none">
+                <rect width="48" height="48" rx="12" fill="#5865F2"/>
+                <path d="M32.5 16.5c-1.5-.7-3.1-1.2-4.8-1.5-.2.4-.4.8-.6 1.2-1.8-.3-3.6-.3-5.4 0-.2-.4-.4-.8-.6-1.2-1.7.3-3.3.8-4.8 1.5-3.1 4.6-4 9.1-3.6 13.5 2 1.5 4 2.4 5.9 3 .5-.6.9-1.3 1.3-2-.7-.3-1.4-.6-2-1 .2-.1.3-.2.5-.4 3.9 1.8 8.1 1.8 12 0 .2.1.3.3.5.4-.7.4-1.3.7-2 1 .4.7.8 1.4 1.3 2 2-.6 3.9-1.5 5.9-3 .5-5.1-.8-9.5-3.6-13.5zM20.3 27c-1.2 0-2.2-1.1-2.2-2.5s1-2.5 2.2-2.5 2.2 1.1 2.2 2.5-1 2.5-2.2 2.5zm7.4 0c-1.2 0-2.2-1.1-2.2-2.5s1-2.5 2.2-2.5 2.2 1.1 2.2 2.5-1 2.5-2.2 2.5z" fill="white"/>
+            </svg>
+        </div>
+        <h4>DISCORD</h4>
+        <a href="https://discord.com/users/923801110752399360" target="_blank">923801110752399360</a>
+    </div>
+
+    <div class="contact-card">
+        <div class="contact-icon">
+            <svg width="60" height="60" viewBox="0 0 48 48" fill="none">
+                <rect width="48" height="48" rx="12" fill="#26A5E4"/>
+                <path d="M24 15l-11 4v8c0 6.6 4.5 12.8 11 14 6.5-1.2 11-7.4 11-14v-8l-11-4zm0 2.2l9 3.3v7c0 5.6-3.8 10.8-9 11.8-5.2-1-9-6.2-9-11.8v-7l9-3.3zm-4 8.8l-1.4 1.4 4.4 4.4 7-7-1.4-1.4-5.6 5.6-3-3z" fill="white"/>
+                <path d="M16 22l2 1 4 4 6-6 2 1-8 8-6-6z" fill="white"/>
+            </svg>
+        </div>
+        <h4>TELEGRAM</h4>
+        <a href="https://t.me/Jaishakj" target="_blank">@Jaishakj</a>
+    </div>
             </div>
         </div>
     </section>
